samples/_failures_safe/1761354593_dc8399_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41404264.c: In function ‘main’:
./samples/SAFE/__tmp_41404264.c:161:16: error: missing terminating " character
  161 |         printf("No valid log entries to analyze\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_41404264.c:161:9: error: expected expression at end of input
  161 |         printf("No valid log entries to analyze\n
      |         ^~~~~~
./samples/SAFE/__tmp_41404264.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41404264.c:161:9: error: expected declaration or statement at end of input
